# static_task_scheduling

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake.yml
include/: cluster.hpp  workflow.hpp
include/algorithms/: algorithm.hpp  common_clustering_based.hpp  cpop.hpp  dbca.hpp  execute.hpp  handle_execution.hpp  heft.hpp  rbca.hpp  tdca.hpp
include/cluster/: cluster.hpp  cluster_node.hpp
include/io/: command_line_arguments.hpp  command_line_interface.hpp  handle_output.hpp  issue_warning.hpp  parse_command_line.hpp  read_csv.hpp  read_dependency_file.hpp  read_workflow_xml.hpp
include/schedule/: from_assignment.hpp  node_schedule.hpp  schedule.hpp  time_interval.hpp
include/util/: di_graph.hpp  epsilon_compare.hpp  timepoint.hpp  topological_order.hpp
include/workflow/: data_transfer_cost.hpp  dependency.hpp  di_graph.hpp  expand_task_bags.hpp  node_task_matrix.hpp  task.hpp  task_bag.hpp  task_dependency.hpp  topology.hpp  workflow.hpp
include/workflow/topology/: bag_dependency.hpp  infer_dependencies.hpp  remove_bag_dependencies.hpp  topology.hpp
src/: CMakeLists.txt  main.cpp  static_task_scheduling.cpp
test/: cli_tests.sh
test/data/: cybershake_100.csv  cybershake_2000.csv  epigenome_100.csv  epigenome_2000.csv  example_assignment.csv  example_cluster.csv  example_dependencies.csv  example_task_bags.csv  large_cluster.csv  ligo_100.csv  ligo_2000.csv  montage_100.csv  montage_1000.csv  small_cluster.csv
